--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,3 +6,21 @@ height: 100%;
 margin: 0;
 padding: 0;
 }
+
+div.fields ul{
+    padding-left: 0;
+}
+
+.list-group-item{
+    padding: 1.75rem 1.25rem!important;
+    display: flex;
+    align-content: center;
+}
+
+.list-group-item p{
+    margin: auto 0;
+}
+
+.deleteField{
+    margin-left: auto;
+}
