--- a/public/css/home.css
+++ b/public/css/home.css
@@ -8,13 +8,14 @@ html {
 
 header {
     position: relative;
-    height: 93vh;
+    height: 100vh;
     width: 100vw;
     background: url("/img/soccer-field.jpg") no-repeat;
     background-position-x: right;
     background-size: cover;
     display: flex;
     justify-content: center;
+
     align-content: center;
 }
 
@@ -37,7 +38,7 @@ h2 {
 .sf-btn-container {
     display: block;
     position: absolute;
-    bottom: 6rem;
+    bottom: 8rem;
     left: 0;
     right: 0;
     text-align: center;
@@ -84,7 +85,8 @@ h2 {
 
 .sf-main {
     height: 100vh;
-    padding: 1.75rem 0;
+    padding-top: 4rem;
+    padding-bottom: 1rem;
     background-color: rgb(255, 255, 255);
     color: rgb(37, 11, 56);
 }
